--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="login_label">Log in</string>
     <string name="intent_scheme">oauth</string>
     <string name="intent_host">cprest</string>
+    <string name="sweet">Sweet</string>
+    <string name="sugar_spice_and_everything_nice">Sugar, spice, and everything nice!</string>
 
 </resources>
