6/7 4:40 PM PST: Finished character count, solved bug where Twitter timeline would not appear, and implemented pull-down refresh + solved bug where log out button became very janky

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="intent_host">cprest</string>
     <string name="sweet">Sweet</string>
     <string name="sugar_spice_and_everything_nice">Sugar, spice, and everything nice!</string>
+    <string name="logout">Logout</string>
 
 </resources>
