6/9: Developed and refined UI and worked on implementing reply function. Has tried progress bar but it has not been tested/unsure of where to add it.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="sweet">Sweet</string>
     <string name="sugar_spice_and_everything_nice">Sugar, spice, and everything nice!</string>
     <string name="logout">Logout</string>
+    <string name="compose">Compose</string>
+    <string name="loading">Loading...</string>
 
 </resources>
